fix default styles making code scrollbars always visible on chrome

--- a/site/sass/index.scss
+++ b/site/sass/index.scss
@@ -206,6 +206,6 @@ abbr {
 
   & > pre {
     padding: 8px;
-    overflow: scroll;
+    overflow: auto;
   }
 }
