--- a/src/embedded/default_site/sass/index.scss
+++ b/src/embedded/default_site/sass/index.scss
@@ -28,6 +28,6 @@
 
   & > pre {
     padding: 8px;
-    overflow: scroll;
+    overflow: auto;
   }
 }
